--- a/tomls/rinkeby.toml
+++ b/tomls/rinkeby.toml
@@ -1,7 +1,7 @@
 [contract]
 # The contracts the poller needs to interact with
-wbi = "0xCfBD4047FeE204f85c2ba4eb965134C5C94654a2"
-pricefeed = "0x70E55DF90aA77970Ce6E43029010e0B567E0ADa8"
+wrb = "0x996Be500EBF09537EDde024f70fFdFA55089E939"
+pricefeed = "0xE046EC0088c9330Ecb4A90D4F2c29cA0Bc31706d"
 
 [account]
 # The ethereum address which will create the transactions
@@ -12,3 +12,4 @@ address = "0xa550Cf4F03Bd2417Cf83c8a652703cdC33c016ee"
 [network]
 # The provider to which the poller needs to connect
 provider = "http://127.0.0.1:8544"
+
