feat: make the poller poll multiple pricefeeds

--- a/tomls/goerli.toml
+++ b/tomls/goerli.toml
@@ -1,7 +1,7 @@
 [contract]
 # The contracts the poller needs to interact with
 wrb = "0xFBd67d672C12B130b61320026E5B681f9040bCd3"
-pricefeed = "0x31EcDb4b4514f134a602F44415E89ffC8B8193e6"
+pricefeeds = ["0x31EcDb4b4514f134a602F44415E89ffC8B8193e6"]
 
 [account]
 # The ethereum address which will create the transactions
