update to latest ABIs and rewards in config file

--- a/tomls/goerli-poller.toml
+++ b/tomls/goerli-poller.toml
@@ -14,3 +14,10 @@ address = "0xa550Cf4F03Bd2417Cf83c8a652703cdC33c016ee"
 [network]
 # The provider to which the poller needs to connect
 provider = "http://127.0.0.1:8545"
+
+[rewards]
+# The rewards for the bridge node
+# need to cover gas expenses
+inclusionReward = 100000000000000000
+resultReward = 100000000000000000
+blockReward = 100000000000000000
