feat: handle timeouts: stronger is better
Co-authored-by: Claudia Bartoli Duncan <claudia@stampery.co>

--- a/tomls/rinkeby.toml
+++ b/tomls/rinkeby.toml
@@ -14,5 +14,8 @@ address = "0x8d86Bc475bEDCB08179c5e6a4d494EbD3b44Ea8B"
 [network]
 # The provider to which the poller needs to connect
 provider = "http://127.0.0.1:8544"
+provider_timeout_secs = 120
 gas_price = 10000000000
 gas = 4000000
+tx_waiting_timeout_secs = 60
+tx_polling_latency_secs = 6
