--- a/tomls/kovan.toml
+++ b/tomls/kovan.toml
@@ -19,6 +19,6 @@ min_secs_between_request_updates = 3600
 provider = "http://127.0.0.1:8542"
 provider_timeout_secs = 120
 gas_price = 10000000000
-gas = 4000000
+gas = 250000
 tx_waiting_timeout_secs = 200
 tx_polling_latency_secs = 20
