--- a/tomls/mainnet.toml
+++ b/tomls/mainnet.toml
@@ -1,5 +1,5 @@
 [contract]
-# The contracts the poller needs to interact with
+# The WRB entry point which the poller needs to interact with
 wrb = "0xd653fbd7c736838289262F0F41A458f35393C88a"
 
 # Addresses of BtcUsdPriceFeed, EthUsdPriceFeed and GoldEurPriceFeed contracts
@@ -9,7 +9,7 @@ pricefeeds = [
 ]
 
 [account]
-# The ethereum address which will create the transactions
+# The address of the EOA that will create the transactions
 # (needs to have a high enough balance)
 address = ""
 # 24 hours
