--- a/tomls/ethereum.goerli.toml
+++ b/tomls/ethereum.goerli.toml
@@ -1,11 +1,8 @@
-[contract]
-# The WRB entry point which the poller needs to interact with
-wrb = "0xD9a6d1Ea0d0f4795985725C7Bd40C31a667c033d"
-
-# Addresses of BtcUsdPriceFeed, EthUsdPriceFeed and GoldEurPriceFeed contracts
+[contracts]
+# ERC2362PriceFeed contracts
 pricefeeds = [
-  "0x9b3C5A6cB55E027d9ae6f265f6FB6fFA86e7b35E",
-  "0xA996939e6a07a0D1D6376c59BE515d8441f5E9b8"
+  "0x43Fe8778389f4EB98e82B750DCCAfF0D7d57778c", # BtcUsdPriceFeed 
+  "0x031699240f710B47e92Df7766C06ee6C22A75df1"  # EthUsdPriceFeed
 ]
 
 [account]
@@ -16,7 +13,7 @@ min_secs_between_request_updates = 3600
 
 [network]
 # The provider to which the poller needs to connect
-provider = "http://127.0.0.1:8542"
+provider = "http://127.0.0.1:8545"
 provider_timeout_secs = 120
 gas_price = 10000000000
 gas = 250000
