--- a/tomls/ethereum.kovan.toml
+++ b/tomls/ethereum.kovan.toml
@@ -1,11 +1,8 @@
-[contract]
-# The WRB entry point which the poller needs to interact with
-wrb = "0x0C4be6AA667df48de54BA174bE7948875fdf152B"
-
-# Addresses of BtcUsdPriceFeed, EthUsdPriceFeed and GoldEurPriceFeed contracts
+[contracts]
+# ERC2362PriceFeed contracts
 pricefeeds = [
-  "0x4958806608D2E3Aa22BD8818B555A0a24fe6c38E",
-  "0xAa0AA725aEb1d382F909a8dE3041e9eaD6507501",
+  "", # BtcUsdPriceFeed 
+  ""  # EthUsdPriceFeed
 ]
 
 [account]
@@ -16,7 +13,7 @@ min_secs_between_request_updates = 3600
 
 [network]
 # The provider to which the poller needs to connect
-provider = "http://127.0.0.1:8545"
+provider = "http://127.0.0.1:8542"
 provider_timeout_secs = 120
 gas_price = 10000000000
 gas = 250000
