--- a/tomls/ethereum.mainnet.toml
+++ b/tomls/ethereum.mainnet.toml
@@ -1,12 +1,10 @@
-[contract]
-# The WRB entry point which the poller needs to interact with
-wrb = "0xd653fbd7c736838289262F0F41A458f35393C88a"
-
-# Addresses of BtcUsdPriceFeed, EthUsdPriceFeed and GoldEurPriceFeed contracts
+[contracts]
+# ERC2362PriceFeed contracts
 pricefeeds = [
-  "0xF2712e7114A237625EFC8bBA6a6ed1Bb8b6029c9",
-  "0x1ebD93231a7fE551E1d6405404Df34909eff4c2C"
+  "", # BtcUsdPriceFeed 
+  ""  # EthUsdPriceFeed
 ]
+
 
 [account]
 # The address of the EOA that will create the transactions
