chore: compose wholly new Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,15 +1,17 @@
-FROM python:3.8.0b1-alpine3.9
+FROM nikolaik/python-nodejs:python3.9-nodejs14
 
-RUN ["apk", "add", "gcc", "musl-dev"]
+# Update apt, first
+RUN ["apt", "update"]
 
 # Copy context and cd into it
-COPY / /
-WORKDIR /
+COPY / /home/pn/app
+WORKDIR /home/pn/app
 
+# Install dependencies
 RUN ["pip", "install", "-r", "requirements.txt"]
+RUN ["npm", "install"]
+RUN ["npx", "witnet-toolkit", "update"]
 
-
-ENTRYPOINT ["python", "price_feed_poller.py", "--config_file"]
-
+# Set the entrypoint
+ENTRYPOINT ["python", "price_feed_poller.py", "--loop_interval_secs", "15", "--config_file"]
 CMD ["$1"]
-
