--- a/tomls/conflux.testnet.toml
+++ b/tomls/conflux.testnet.toml
@@ -1,20 +1,26 @@
-[contracts]
+[pricefeeds]
 # ERC2362PriceFeed contracts
-pricefeeds = [
-  "0x8D8f26d4632A8d985618Ae60569C93f3a57009Da", # BtcUsdPriceFeed 
-  "0x89e0b86eEC97Bc24F44e3eB206b22b235Db58C1E", # CfxUsdPriceFeed 
-  "0x8fe2d6e0984fc65Ad68726A74d822881282A30A0"  # EthUsdPriceFeed
+addresses = [
+  "0x8594B74645644b6a5fdE15597D3ADc15C77284A1", # BtcUsdPriceFeed 
+  "0x80DfFcbD9Fa48553fbC98aa7c21D50Ae47753C89", # EthUsdPriceFeed
+  "0x81cc73426944cC15BE22a3d7c812282E66F2c689"  # CfxUsdtPriceFeed
 ]
+thresholds = [
+  2.0, # BtcUsdPriceFeed
+  2.0, # EthUsdPriceFeed
+  2.0  # CfxUsdtPriceFeed
 
+]
 [account]
 # The address of the EOA that will create the transactions
 # (needs to have a high enough balance)
 address = "0x10E824822C6A5C28dE3568DF99604D68e9fd9c8c"
 min_secs_between_request_updates = 300
+max_secs_between_request_updates = 3600
 
 [network]
 # The provider to which the poller needs to connect
-provider = "http://127.0.0.1:3000"
+provider = "http://127.0.0.1:8540"
 provider_timeout_secs = 120
 gas_price = 1
 gas = 200000
