--- a/tomls/celo.alfajores.toml
+++ b/tomls/celo.alfajores.toml
@@ -1,13 +1,12 @@
 [pricefeeds]
-# ERC2362PriceFeed contracts
-addresses = [
-  "0x4F8Ac2D45475A1894Cb85E3A21173d5e83041083", # BtcUsdPriceFeed 
-  "0xD182e334e3c7140F8a520d326E333CA5f1FB7dDa"  # OmgUsdtPriceFeed
-]
-thresholds = [
-  2.0, # BtcUsdPriceFeed
-  2.0  # OmgUsdtPriceFeed
-]
+
+  [pricefeeds.BtcUsdPriceFeed]
+  contract_address = "0x4F8Ac2D45475A1894Cb85E3A21173d5e83041083"
+  deviation_threshold_percentage = 2.0
+
+  [pricefeeds.EthUsdPriceFeed]
+  contract_address = "0xD182e334e3c7140F8a520d326E333CA5f1FB7dDa"
+  deviation_threshold_percentage = 2.0
 
 [account]
 # The address of the EOA that will create the transactions
