--- a/tomls/ethereum.rinkeby.toml
+++ b/tomls/ethereum.rinkeby.toml
@@ -1,13 +1,12 @@
 [pricefeeds]
-# ERC2362PriceFeed contracts
-addresses = [
-  "0xccAe308C9b91a3e3De8E0Dd4136Ce0Bb608e6ea4", # BtcUsdPriceFeed 
-  "0x4566CaD4e76575f85fA423EF46080Afe353f7A05"  # EthUsdPriceFeed
-]
-thresholds = [
-  2.0, # BtcUsdPriceFeed
-  2.0  # EthUsdPriceFeed
-]
+
+  [pricefeeds.BtcUsdPriceFeed]
+  contract_address = "0xccAe308C9b91a3e3De8E0Dd4136Ce0Bb608e6ea4"
+  deviation_threshold_percentage = 2.0
+
+  [pricefeeds.EthUsdPriceFeed]
+  contract_address = "0x4566CaD4e76575f85fA423EF46080Afe353f7A05"
+  deviation_threshold_percentage = 2.0
 
 [account]
 # The address of the EOA that will create the transactions
