--- a/tomls/ethereum.goerli.toml
+++ b/tomls/ethereum.goerli.toml
@@ -1,23 +1,11 @@
-[pricefeeds]
-
-  [pricefeeds.BtcUsdPriceFeed]
-  contract_address = "0xcd445329A50EB30e82F349A89D583B2Cb516F18f"
-  deviation_threshold_percentage = 2.0
-
-  [pricefeeds.EthUsdPriceFeed]
-  contract_address = "0x7D72Bd8F6c9D06Ae6D3Fd4B1aE0CAdab732959a7"
-  deviation_threshold_percentage = 2.0
-
-[account]
-# The address of the EOA that will be signing transactions
-address = "0x8d86Bc475bEDCB08179c5e6a4d494EbD3b44Ea8B"
-min_secs_between_request_updates = 300
-max_secs_between_request_updates = 3600
-
 [network]
-provider = "http://localhost:8545"
-provider_timeout_secs = 120
+name = "ethereum.goerli"
+provider = "http://127.0.0.1:8545"
+from = "0x8d86Bc475bEDCB08179c5e6a4d494EbD3b44Ea8B"
 gas_price = 10000000000
-gas = 250000
+gas = 350000
+symbol = "ETH"
+provider_timeout_secs = 120
 tx_waiting_timeout_secs = 200
 tx_polling_latency_secs = 20
+witnet_resolution_secs = 240
