--- a/tomls/ethereum.goerli.toml
+++ b/tomls/ethereum.goerli.toml
@@ -1,11 +1,11 @@
 [network]
+from = "0x8d86Bc475bEDCB08179c5e6a4d494EbD3b44Ea8B"
+gas = 350_000
+gas_price = 10_000_000_000
 name = "ethereum.goerli"
 provider = "http://127.0.0.1:8545"
-from = "0x8d86Bc475bEDCB08179c5e6a4d494EbD3b44Ea8B"
-gas_price = 10000000000
-gas = 350000
-symbol = "ETH"
 provider_timeout_secs = 120
+symbol = "gETH"
 tx_waiting_timeout_secs = 200
 tx_polling_latency_secs = 20
 witnet_resolution_secs = 240
