--- a/tomls/ethereum.mainnet.toml
+++ b/tomls/ethereum.mainnet.toml
@@ -1,25 +1,11 @@
-[pricefeeds]
-
-  [pricefeeds.BtcUsdPriceFeed]
-  contract_address = "0x4250a9d579E42588A8fFEd02e1a078A3BF767e8d"
-  deviation_threshold_percentage = 2.0
-
-  [pricefeeds.EthUsdPriceFeed]
-  contract_address = "0x11C073F17f018Bc1B372c7283fDe0608003823D5"
-  deviation_threshold_percentage = 2.0
-
-[account]
-# The address of the EOA that will create the transactions
-# (needs to have a high enough balance)
-address = "0x102cB4Da51a9936ba2297be8C930B4Ca658586DA"
-min_secs_between_request_updates = 3600
-max_secs_between_request_updates = 604800 
-
 [network]
-# The provider to which the poller needs to connect
+from = "0x102cB4Da51a9936ba2297be8C930B4Ca658586DA"
+gas = 350_000
+gas_price = 10_000_000_000
+name = "ethereum.mainnet"
 provider = "http://127.0.0.1:9545"
 provider_timeout_secs = 120
-gas_price = "estimate_medium"
-gas = 250000
+symbol = "ETH"
 tx_waiting_timeout_secs = 900
 tx_polling_latency_secs = 30
+witnet_resolution_secs = 240
