--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "price-feed-poller",
-  "version": "0.5.1",
+  "name": "price-feeds-poller",
+  "version": "1.0.0",
   "description": "",
   "main": "",
-  "repository": "https://github.com/stampery-labs/price_feed_poller",
+  "repository": "https://github.com/witnet/price_feeds_poller",
   "license": "MIT",
   "private": false,
   "scripts": {},
