--- a/price_feeds_config.json
+++ b/price_feeds_config.json
@@ -196,7 +196,7 @@
     "ethereum": {
       "networks": {
         "ethereum.goerli": {
-          "address": "0x4060c2916F4e4277dd310296e13885120571e5E1",
+          "address": "0x573A5Ac0E1446b746F8e7FB4f0A6F850505c219e",
           "blockExplorer": "https://goerli.etherscan.io/address/{address}",
           "color": "#ff5599",
           "name": "Ethereum Goerli",
@@ -211,7 +211,7 @@
             "Price-ETH/USD-6": {
               "label": "$",
               "deviationPercentage": 1.0,
-              "maxSecsBetweenUpdates": 900,
+              "maxSecsBetweenUpdates": 300,
               "minSecsBetweenUpdates": 300
             }
           }
@@ -254,6 +254,31 @@
               "label": "$",
               "deviationPercentage": 1.0,
               "maxSecsBetweenUpdates": 3600,
+              "minSecsBetweenUpdates": 300
+            }
+          }
+        }
+      }
+    },
+    "kcc": {
+      "networks": {
+        "kcc.testnet": {
+          "address": "0xeD074DA2A76FD2Ca90C1508930b4FB4420e413B0",
+          "blockExplorer": "https://scan-testnet.kcc.network/address/{address}",
+          "color": "#ff0066",
+          "name": "KCC Testnet",
+          "pollingPeriod": 10000,
+          "feeds": {
+            "Price-BTC/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-ETH/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 300,
               "minSecsBetweenUpdates": 300
             }
           }
