--- a/price_feeds_config.json
+++ b/price_feeds_config.json
@@ -196,7 +196,7 @@
     "ethereum": {
       "networks": {
         "ethereum.goerli": {
-          "address": "0x573A5Ac0E1446b746F8e7FB4f0A6F850505c219e",
+          "address": "",
           "blockExplorer": "https://goerli.etherscan.io/address/{address}",
           "color": "#ff5599",
           "name": "Ethereum Goerli",
@@ -310,6 +310,30 @@
         }
       }
     },
+    "polygon": {
+      "networks": {
+        "polygon.mumbai": {
+          "address": "0xeD074DA2A76FD2Ca90C1508930b4FB4420e413B0",
+          "blockExplorer": "https://mumbai.polygonscan.com/address/{address}",
+          "color": "#66ff00",
+          "name": "Polygon/MATIC Mumbai (testnet)",
+          "pollingPeriod": 10000,
+          "feeds": {
+            "Price-BTC/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-ETH/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 300
+            }
+          }
+        }
+      }
     }
   }
 }
