--- a/price_feeds_config.json
+++ b/price_feeds_config.json
@@ -260,6 +260,31 @@
         }
       }
     },
+    "harmony": {
+      "networks": {
+        "harmony.testnet#0": {
+          "address": "0xeD074DA2A76FD2Ca90C1508930b4FB4420e413B0",
+          "blockExplorer": "https://explorer.pops.one/address/{address}",
+          "color": "#f6006f",
+          "name": "Harmony Testnet Shard #0",
+          "pollingPeriod": 10000,
+          "feeds": {
+            "Price-BTC/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-ETH/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 300
+            }
+          }
+        }
+      }
+    },
     "kcc": {
       "networks": {
         "kcc.testnet": {
