chore: add `witnet_toolkit_timeout_secs` to all tomls

--- a/price_feeds_config.json
+++ b/price_feeds_config.json
@@ -330,6 +330,12 @@
               "deviationPercentage": 1.0,
               "maxSecsBetweenUpdates": 300,
               "minSecsBetweenUpdates": 300
+            },
+            "Price-METIS/USDT-6": {
+              "label": "₮",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 300
             }
           }
         }
