--- a/tomls/ethereum.mainnet.toml
+++ b/tomls/ethereum.mainnet.toml
@@ -9,3 +9,4 @@ symbol = "ETH"
 tx_waiting_timeout_secs = 900
 tx_polling_latency_secs = 30
 witnet_resolution_secs = 240
+witnet_toolkit_timeout_secs = 15
