--- a/tomls/ethereum.rinkeby.toml
+++ b/tomls/ethereum.rinkeby.toml
@@ -9,3 +9,4 @@ symbol = "rETH"
 tx_waiting_timeout_secs = 200
 tx_polling_latency_secs = 20
 witnet_resolution_secs = 240
+witnet_toolkit_timeout_secs = 15
