--- a/tomls/harmony.testnet#0.toml
+++ b/tomls/harmony.testnet#0.toml
@@ -9,3 +9,4 @@ symbol = "ONE"
 tx_waiting_timeout_secs = 60
 tx_polling_latency_secs = 2
 witnet_resolution_secs = 240
+witnet_toolkit_timeout_secs = 15
