--- a/tomls/polygon.mumbai.toml
+++ b/tomls/polygon.mumbai.toml
@@ -9,3 +9,4 @@ symbol = "MATIC"
 tx_waiting_timeout_secs = 120
 tx_polling_latency_secs = 2
 witnet_resolution_secs = 240
+witnet_toolkit_timeout_secs = 15
