--- a/price_feeds_config.json
+++ b/price_feeds_config.json
@@ -237,6 +237,76 @@
               "minSecsBetweenUpdates": 900
             }
           }
+        },
+        "conflux.espace.testnet": {
+          "address": "0x49C0BCce51a8B28f92d008394F06d5B259657F33",
+          "blockExplorer": "https://evmtestnet.confluxscan.net/address/{address}?tab=contract-viewer",
+          "color": "#6600ff",
+          "name": "Conflux eSpace Testnet",
+          "pollingPeriod": 30000,
+          "feeds": {
+            "Price-BTC/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-CFX/USDT-6": {
+              "label": "₮",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-ETH/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-USDT/USD-6": {
+              "label": "$",
+              "deviationPercentage": 0.1,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 900
+            }
+          }
+        }
+      }
+    },
+    "cronos": {
+      "networks": {
+        "cronos.testnet": {
+          "address": "0xeD074DA2A76FD2Ca90C1508930b4FB4420e413B0",
+          "blockExplorer": "https://cronos.org/explorer/testnet3/address/{address}/read-contract",
+          "color": "#6600ff",
+          "name": "Cronos Testnet",
+          "pollingPeriod": 300000,
+          "feeds": {
+            "Price-BTC/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 900
+            },
+            "Price-CRO/USDT-6": {
+              "label": "₮",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 900
+            },
+            "Price-ETH/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 900
+            },
+            "Price-USDT/USD-6": {
+              "label": "$",
+              "deviationPercentage": 0.1,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 900
+            }
+          }
         }
       }
     },
@@ -383,6 +453,43 @@
               "deviationPercentage": 1.0,
               "maxSecsBetweenUpdates": 300,
               "minSecsBetweenUpdates": 300
+            }
+          }
+        }
+      }
+    },
+    "moonbeam": {
+      "networks": {
+        "moonbeam.moonbase": {
+          "address": "0x56834Ff8D4b27db647Da97CA3bd8540f7fA0e89D",
+          "blockExplorer": "https://moonbase.moonscan.io/address/{address}",
+          "color": "#ff6600",
+          "name": "Moonbase Alpha",
+          "pollingPeriod": 10000,
+          "feeds": {
+            "Price-BTC/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 900
+            },
+            "Price-ETH/USD-6": {
+              "label": "$",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 900
+            },
+            "Price-GLMR/USDT-6": {
+              "label": "₮",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 900
+            },
+            "Price-USDT/USD-6": {
+              "label": "$",
+              "deviationPercentage": 0.1,
+              "maxSecsBetweenUpdates": 300,
+              "minSecsBetweenUpdates": 900
             }
           }
         }
