--- a/tomls/ethereum.rinkeby.toml
+++ b/tomls/ethereum.rinkeby.toml
@@ -1,12 +1,10 @@
 [network]
 from = "0x8d86Bc475bEDCB08179c5e6a4d494EbD3b44Ea8B"
-gas = 350_000
-gas_price = 10_000_000_000
 name = "ethereum.rinkeby"
+gas = 350_000
 provider = "http://127.0.0.1:8544"
-provider_timeout_secs = 120
+provider_poa = true
 symbol = "rETH"
 tx_waiting_timeout_secs = 200
 tx_polling_latency_secs = 20
-witnet_resolution_secs = 240
-witnet_toolkit_timeout_secs = 15
+
