--- a/tomls/kcc.testnet.toml
+++ b/tomls/kcc.testnet.toml
@@ -1,12 +1,8 @@
 [network]
 from = "0x8d86Bc475bEDCB08179c5e6a4d494EbD3b44Ea8B"
-gas = 350_000
-gas_price = 1_000_000_000
 name = "kcc.testnet"
 provider = "http://127.0.0.1:8537"
-provider_timeout_secs = 60
+provider_poa = true
 symbol = "KCS"
 tx_waiting_timeout_secs = 60
 tx_polling_latency_secs = 6
-witnet_resolution_secs = 240
-witnet_toolkit_timeout_secs = 15
