chore: set evm finalization secs depending on chain

--- a/tomls/celo.alfajores.toml
+++ b/tomls/celo.alfajores.toml
@@ -5,5 +5,6 @@ name = "celo.alfajores"
 provider = "http://127.0.0.1:8538"
 provider_poa = true
 symbol = "CELO"
-tx_waiting_timeout_secs = 60
-tx_polling_latency_secs = 5
+evm_waiting_timeout_secs = 30
+evm_waiting_timeout_secs = 60
+evm_polling_latency_secs = 5
