--- a/tomls/conflux.espace.testnet.toml
+++ b/tomls/conflux.espace.testnet.toml
@@ -3,5 +3,6 @@ from = "0x8d86Bc475bEDCB08179c5e6a4d494EbD3b44Ea8B"
 name = "conflux.espace.testnet"
 provider = "http://127.0.0.1:8529"
 symbol = "CFX"
-tx_waiting_timeout_secs = 60
-tx_polling_latency_secs = 5
+evm_finalization_secs = 16
+evm_waiting_timeout_secs = 60
+evm_polling_latency_secs = 5
