--- a/tomls/cronos.testnet.toml
+++ b/tomls/cronos.testnet.toml
@@ -4,5 +4,6 @@ name = "cronos.testnet"
 provider = "http://127.0.0.1:8530"
 #provider_poa = true
 symbol = "tCRO"
-tx_waiting_timeout_secs = 120
-tx_polling_latency_secs = 5
+evm_finalization_secs = 30
+evm_waiting_timeout_secs = 120
+evm_polling_latency_secs = 5
