--- a/tomls/polygon.mumbai.toml
+++ b/tomls/polygon.mumbai.toml
@@ -6,5 +6,6 @@ name = "polygon.mumbai"
 provider = "http://127.0.0.1:8535"
 provider_poa = true
 symbol = "MATIC"
-tx_waiting_timeout_secs = 120
-tx_polling_latency_secs = 2
+evm_finalization_secs = 20
+evm_waiting_timeout_secs = 120
+evm_polling_latency_secs = 2
