--- a/tomls/avalanche.fuji.toml
+++ b/tomls/avalanche.fuji.toml
@@ -4,5 +4,6 @@ name = "avalanche.fuji"
 provider = "http://127.0.0.1:8533"
 provider_poa = true
 symbol = "AVAX"
-tx_waiting_timeout_secs = 60
-tx_polling_latency_secs = 5
+evm_finalization_secs = 2
+evm_waiting_timeout_secs = 60
+evm_polling_latency_secs = 5
