--- a/tomls/boba.rinkeby.toml
+++ b/tomls/boba.rinkeby.toml
@@ -5,5 +5,6 @@ name = "boba.rinkeby"
 provider = "http://127.0.0.1:8539"
 provider_poa = true
 symbol = "oETH"
-tx_waiting_timeout_secs = 60
-tx_polling_latency_secs = 10
+evm_waiting_timeout_secs = 60
+evm_waiting_timeout_secs = 60
+evm_polling_latency_secs = 10
