--- a/tomls/conflux.core.testnet.toml
+++ b/tomls/conflux.core.testnet.toml
@@ -3,5 +3,6 @@ from = "0x10E824822C6A5C28dE3568DF99604D68e9fd9c8c"
 name = "conflux.testnet"
 provider = "http://127.0.0.1:8540"
 symbol = "CFX"
-tx_waiting_timeout_secs = 60
-tx_polling_latency_secs = 5
+evm_finalization_secs = 120
+evm_waiting_timeout_secs = 60
+evm_polling_latency_secs = 5
