--- a/tomls/ethereum.mainnet.toml
+++ b/tomls/ethereum.mainnet.toml
@@ -4,5 +4,6 @@ name = "ethereum.mainnet"
 gas = 350_000
 provider = "http://127.0.0.1:9545"
 symbol = "ETH"
-tx_waiting_timeout_secs = 900
-tx_polling_latency_secs = 30
+evm_finalization_secs = 120
+evm_waiting_timeout_secs = 900
+evm_polling_latency_secs = 30
