--- a/tomls/harmony.testnet#0.toml
+++ b/tomls/harmony.testnet#0.toml
@@ -3,5 +3,6 @@ from = "0x8d86Bc475bEDCB08179c5e6a4d494EbD3b44Ea8B"
 name = "harmony.testnet#0"
 provider = "http://127.0.0.1:8534"
 symbol = "ONE"
-tx_waiting_timeout_secs = 60
-tx_polling_latency_secs = 2
+evm_finalization_secs = 90
+evm_waiting_timeout_secs = 60
+evm_polling_latency_secs = 2
