--- a/tomls/kcc.testnet.toml
+++ b/tomls/kcc.testnet.toml
@@ -4,5 +4,6 @@ name = "kcc.testnet"
 provider = "http://127.0.0.1:8537"
 provider_poa = true
 symbol = "KCS"
-tx_waiting_timeout_secs = 60
-tx_polling_latency_secs = 6
+evm_finalization_secs = 30
+evm_waiting_timeout_secs = 60
+evm_polling_latency_secs = 6
