--- a/tomls/metis.rinkeby.toml
+++ b/tomls/metis.rinkeby.toml
@@ -4,6 +4,7 @@ name = "metis.rinkeby"
 provider = "http://localhost:8536"
 provider_poa = true
 symbol = "tMETIS"
-tx_waiting_timeout_secs = 60
-tx_polling_latency_secs = 6
+evm_finalization_secs = 120
+evm_waiting_timeout_secs = 60
+evm_polling_latency_secs = 6
 
