--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ parsimonious==0.8.1
 protobuf==3.11.3
 pycryptodome==3.9.6
 pyrsistent==0.15.7
+python-dotenv==0.20.0
 requests==2.22.0
 six==1.14.0
 toml==0.10.0
