--- a/price_feeds_config.json
+++ b/price_feeds_config.json
@@ -535,6 +535,89 @@
     },
     "polygon": {
       "networks": {
+        "polygon.goerli": {
+          "address": "0xFEeEed553b5a5C236EDd047BB034EF303d36f827",
+          "blockExplorer": "https://mumbai.polygonscan.com/address/{address}",
+          "color": "#66ff00",
+          "name": "Polygon Mumbai",
+          "pollingPeriod": 120000,
+          "feeds": {
+            "Price-BAT/USD-6": {
+              "isRouted": true,
+              "label": "$"
+            },
+            "Price-BAT/USDT-6": {
+              "label": "USDT",
+              "deviationPercentage": 3.5,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-BTC/USD-6": {
+              "label": "$",
+              "deviationPercentage": 3.5,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-DAI/USD-6": {
+              "label": "$",
+              "deviationPercentage": 0.1,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-ETH/USD-6": {
+              "label": "$",
+              "deviationPercentage": 3.5,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-MATIC/USD-6": {
+              "label": "$",
+              "deviationPercentage": 3.5,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-QUICK/USD-6": {
+              "isRouted": true,
+              "label": "$"
+            },
+            "Price-QUICK/USDC-6": {
+              "label": "$",
+              "deviationPercentage": 3.5,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-QUICK/WETH-9": {
+              "label": "WETH",
+              "deviationPercentage": 3.5,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-QUICK/WMATIC-6": {
+              "label": "WMATIC",
+              "deviationPercentage": 3.5,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-USDC/USD-6": {
+              "label": "$",
+              "deviationPercentage": 0.1,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-USDT/USD-6": {
+              "label": "$",
+              "deviationPercentage": 0.1,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 300
+            },
+            "Price-VSQ/DAI-6": {
+              "label": "DAI",
+              "deviationPercentage": 1.0,
+              "maxSecsBetweenUpdates": 86400,
+              "minSecsBetweenUpdates": 300
+            }
+          }
+        },
         "polygon.mumbai": {
           "address": "0x72bCA3Ee82AA4F982479FF26389f6E3f0040a2C8",
           "blockExplorer": "https://mumbai.polygonscan.com/address/{address}",
@@ -545,7 +628,7 @@
             "Price-BTC/USD-6": {
               "label": "$",
               "deviationPercentage": 1.0,
-              "maxSecsBetweenUpdates": 300,
+              "maxSecsBetweenUpdates": 900,
               "minSecsBetweenUpdates": 300
             },
             "Price-ETH/USD-6": {
