chore: add testing config for elastos.testnet

--- a/.env_example
+++ b/.env_example
@@ -8,6 +8,7 @@ WPFP_NETWORK_NAME="chain.network"
 #WPFP_NETWORK_TIMEOUT_SECS=60
 
 ## Web3 params
+WPFP_WEB3_ADDRESS="0x9999999d139bdBFbF25923ba39F63bBFc7593400"
 #WPFP_WEB3_FINALIZATION_SECS=60
 WPFP_WEB3_FROM=""
 #WPFP_WEB3_GAS=300_000
