feat(ci): improve docker image to support latest witnet-rust versions

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,16 +1,24 @@
-FROM nikolaik/python-nodejs:python3.9-nodejs14
+FROM ubuntu:jammy
 
-# Update apt, first
-RUN ["apt", "update"]
+# Update APT and install system dependencies
+RUN --mount=type=cache,target=/var/cache/apt \
+    apt-get update && \
+    apt-get install -yqq --no-install-recommends \
+        build-essential \
+        npm \
+        pip \
+        python3-dev
 
 # Copy context and cd into it
 COPY / /home/pn/app
 WORKDIR /home/pn/app
 
-# Install dependencies
-RUN ["pip", "install", "-r", "requirements.txt"]
-RUN ["npm", "install"]
-RUN ["npx", "witnet-toolkit", "update"]
+# Install Python and NodeJS dependencies
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install -r requirements.txt
+RUN --mount=type=cache,target=/node_modules \
+    npm install
+RUN npx witnet-toolkit update
 
 # Set the entrypoint
-ENTRYPOINT ["python", "price_feeds_poller.py"]
+ENTRYPOINT ["python3", "price_feeds_poller.py"]
